# A-Stats-Content

./: .env.example  .gitignore  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_REPORT.md  AUDIT_SUMMARY.md  CRITICAL_FIX_GUIDE.md  DEPLOYMENT_CHECKLIST.md  INTEGRATION_AUDIT_REPORT.md  README.md  SECURITY_AUDIT_REPORT.md  TODO.md  docker-compose.yml
backend/: Dockerfile  PHASE_10_TEAM_OWNERSHIP_SUMMARY.md  README.md  alembic.ini  main.py  pyproject.toml  railway.toml  start.sh
backend/adapters/: __init__.py
backend/adapters/ai/: __init__.py  anthropic_adapter.py  gemini_adapter.py  openai_adapter.py  replicate_adapter.py
backend/adapters/cms/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  example_usage.py  wordpress_adapter.py
backend/api/: __init__.py  dependencies.py  deps_admin.py  deps_project.py  deps_team.py  oauth_helpers.py  utils.py
backend/core/: __init__.py  plans.py
backend/infrastructure/: __init__.py  logging_config.py  redis.py
backend/prompts/: loader.py  manifest.json
backend/services/: SCHEDULER_README.md  __init__.py  aeo_scoring.py  background_tasks.py  bulk_generation.py  competitor_analyzer.py  content_decay.py  content_pipeline.py  content_scheduler.py  email_journey.py  email_journey_unsubscribe.py  email_journey_worker.py  error_logger.py  generation_tracker.py  knowledge_processor.py  knowledge_service.py  pagespeed.py  post_queue.py  project_invitations.py  project_usage.py  revenue_attribution.py  schema_generator.py  site_auditor.py  social_scheduler.py  task_queue.py  team_invitations.py  team_usage.py
backend/tests/: ADMIN_TESTS.md  BILLING_TESTS.md  KNOWLEDGE_TESTS.md  README.md  SOCIAL_TESTS.md  SOCIAL_TEST_IMPLEMENTATION_GUIDE.md  TEAM_TESTS.md  TEST_AUDIT_REPORT.md  conftest.py  conftest_social_fixtures.py
(+667 files in other folders)
